# SelectStuff

./: .gitignore  Containerfile  Dockerfile  Dockerfile.backend  Dockerfile.ui  README.md  collector-config.yml  config.yml  docker-compose.yaml  otel-collector-config.yaml  pyproject.toml  requirements.txt  search.py
app/: config.py  database.py  main.py
app/alertmanager/: config.yml
app/applications/: __init__.py  news.py  sql_converter.py
app/applications/news/: __init__.py  miprov2_llama32_3b.json  news.py  signature.py
app/models/: db_models.py  inputs.py
app/routes/: db_routes.py
applications/: __init__.py
applications/base/: stuff.py
applications/helpers/: database.py
applications/news/: config.yml  signature.py
backend/: main.py
backend/routes/: db_routes.py
cmd/: otel-collector-config.yaml
data/: llm_data.db
databases/: database.py
extension/: background.js  encryption.js  manifest.json  options.html  options.js  popup.js
grafana/dashboards/: fastapi_dashboard.json
jaeger/: config-spm.yaml
prometheus/: alerts.yml  prometheus.yml
search_app/: fts_utils.py  main.py
stuff/applications/: __init__.py  applications.yml
stuff/applications/base/: README.md  __init__.py  stuff.py
stuff/applications/helpers/: appconfig.py  database.py  llm.py  models.py
stuff/applications/models/: __init__.py  inputs.py
stuff/applications/news/: __init__.py  news.py
stuff/applications/news/states/: miprov2_llama32_3b.json
stuff/backend/: main.py
stuff/databases/: database.py  db_routes.py
stuff/databases/utils/tracing/: dspy_tracing.py
stuff/extension/: manifest.json  options.html  options.js  popup.html
stuff/extension/src/: api.js  background.js  menuManager.js  options.js  utils.js
stuff/shared/: logging_config.py
stuff/ui/: fts_utils.py  main.py  search.py  trace_utils.py
stuff/ui/.streamlit/: config.toml
stuff/ui/utils/: fts_utils.py  trace_utils.py
tests/: test_application_init.py  test_db_routes.py  test_sql_converter.py
training/: README.md  review.py
training/aggregate/: aggregate.py  cluster.py  fields.py
training/aggregate/tests/: test_aggregate.py  test_cluster.py
training/duck_search/: __init__.py  duck_search.py  utils.py
training/duck_search/parsers/: __init__.py  html.py  lite.py
training/news/: news_app.ipynb  news_app.py  news_app_data.ipynb  train_signature.ipynb
training/review/: __init__.py  cli.py  config.py
training/review/core/: data_editor.py  file_processor.py  types.py
training/review/tests/: conftest.py  test_config.py  test_data_editor.py  test_file_processor.py
training/review/ui/: app.py
training/scorer/: scorer.py
training/scorer/core/: dispatcher.py  type_hint.py
ui/: fts_utils.py  main.py  search.py
