[project]
name = "selectstuff"
version = "0.1.0"
description = "Collect stuff from your browser"
authors = [
    {name = "Lee Miller",email = "dleemiller@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "dspy-ai (>=2.5.43,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "wordllama (>=0.3.8.post20,<0.4.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
